--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "view-design": "^4.1.3",
     "vue": "^2.6.11",
+    "vue-mindmap": "^0.0.4",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
