--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "view-design": "^4.2.0",
     "vue": "^2.5.2",
     "vue-mindmap": "^0.0.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
