zwx: add lodash

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "global": "^4.4.0",
+    "lodash": "^4.17.15",
     "view-design": "^4.2.0",
     "vue": "^2.5.2",
     "vue-mindmap": "^0.0.4",
@@ -68,8 +69,8 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-server": "^3.1.11",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
