--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.15",
     "view-design": "^4.2.0",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.7.0",
     "vue-mindmap": "^0.0.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.3"
