--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bibtex-parse-js": "^0.0.24",
     "d3": "^5.16.0",
     "global": "^4.4.0",
     "lodash": "^4.17.15",
