--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "bibtex-parse-js": "^0.0.24",
     "d3": "^5.16.0",
     "global": "^4.4.0",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.15",
+    "prism": "^4.1.2",
     "view-design": "^4.2.0",
     "vue": "^2.5.2",
     "vue-cookies": "^1.7.0",
+    "vue-markdown": "^2.2.4",
     "vue-mindmap": "^0.0.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.3"
