--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "bibtex-parse-js": "^0.0.24",
     "d3": "^5.16.0",
+    "github-markdown-css": "^4.0.0",
     "global": "^4.4.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.15",
