--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "github-markdown-css": "^4.0.0",
     "global": "^4.4.0",
     "json-loader": "^0.5.7",
+    "less-loader": "4.1.0",
     "lodash": "^4.17.15",
     "prism": "^4.1.2",
     "simplemde": "^1.11.2",
@@ -28,6 +29,7 @@
     "vue-markdown": "^2.2.4",
     "vue-mindmap": "^0.0.4",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -74,7 +76,7 @@
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
