--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-markdown": "^2.2.4",
     "vue-mindmap": "^0.0.4",
     "vue-router": "^3.0.1",
+    "vue-schart": "^2.0.0",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.3"
   },
