--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less-loader": "4.1.0",
     "lodash": "^4.17.15",
     "prism": "^4.1.2",
+    "schart.js": "^3.0.0",
     "simplemde": "^1.11.2",
     "view-design": "^4.2.0",
     "vue": "^2.5.2",
