--- a/package.json
+++ b/package.json
@@ -16,13 +16,24 @@
     "axios": "^0.19.2",
     "bibtex-parse-js": "^0.0.24",
     "d3": "^5.16.0",
+    "dom-to-image": "^2.6.0",
+    "github-markdown-css": "^4.0.0",
     "global": "^4.4.0",
+    "json-loader": "^0.5.7",
+    "less-loader": "4.1.0",
     "lodash": "^4.17.15",
+    "prism": "^4.1.2",
+    "schart.js": "^3.0.0",
+    "simplemde": "^1.11.2",
     "view-design": "^4.2.0",
     "vue": "^2.5.2",
+    "vue-clipboard2": "^0.3.1",
     "vue-cookies": "^1.7.0",
+    "vue-markdown": "^2.2.4",
     "vue-mindmap": "^0.0.4",
     "vue-router": "^3.0.1",
+    "vue-schart": "^2.0.0",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -69,7 +80,7 @@
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
